# langchain-riskqa-toolkit

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/mock_calls/: call_demo_001.json  call_demo_002_violation.json
data/mock_chats/: chat_demo_001.json
data/mock_tickets/: ticket_demo_001.json
data/mock_violations/: violation_demo_001.json
docs/: callqa.md  chatqa.md  quickstart.md  ticketqa.md  violationqa.md
examples/: callqa_demo.py  chatqa_demo.py  ticketqa_demo.py  violationqa_demo.py
riskqa/: __init__.py  config.py
riskqa/callqa/: __init__.py  chains.py  parsers.py  prompts.py  rules.py
riskqa/chatqa/: __init__.py  chains.py  parsers.py  prompts.py  rules.py
riskqa/core/: __init__.py  adapters.py  rule_engine.py  schemas.py  scoring.py
riskqa/ticketqa/: __init__.py  chains.py  parsers.py  prompts.py  rules.py
riskqa/violationqa/: __init__.py  chains.py  parsers.py  prompts.py  rules.py
tests/: conftest.py  test_adapters.py  test_callqa.py  test_chatqa.py  test_config.py  test_integration.py  test_rule_engine.py  test_schemas.py  test_scoring.py  test_ticketqa.py  test_violationqa.py
