[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskqa-toolkit"
version = "0.1.0"
description = "LangChain-based intelligent quality inspection toolkit for call QA, chat compliance, work order intelligence, and violation ticket processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "riskqa contributors" }]
keywords = ["langchain", "quality-inspection", "risk-control", "call-qa", "chat-compliance", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["riskqa"]

[project.optional-dependencies]
ollama = ["langchain-ollama>=0.3"]
azure = ["langchain-openai>=0.3"]
eval = ["langsmith>=0.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
